# pythonjp_discordbots

./: .gitignore
bot/: example.env  pythonjpbot.service  setup.cfg
bot/pythonjpbot/: __main__.py  commands.py  reactions.py  unfurl.py  viewattachments.py
discofileview/: main.py  sample.py  server.txt  setup.cfg
