[metadata]
name = pythonjpbot
version = attr: pythonjpbot.__version__
author = Atsuo Ishimoto
[options]
python_requires = >=3.7
packages = find:

setup_requires =
    wheel
    setuptools-git
    importlib_resources

install_requires =
    discord.py
    requests
    google-cloud-datastore
    pygments
    PyGithub

[options.extras_require]
dev =
    wheel
    pytest
    black
    flake8
    autoflake
    pre-commit

