[metadata]
name = discofileview
author = Atsuo Ishimoto
[options]
python_requires = >=3.7
packages = find:

setup_requires =
    wheel
    setuptools-git
    importlib_resources

install_requires =
    fastapi
    jinja2
    pygments
    httpx
    uvicorn
    gunicorn    
    uvloop
    httptools
    discord.py
    
[options.extras_require]
dev =
    wheel
    pytest
    black
    flake8
    autoflake
    pre-commit
    uvicorn

